[gd_scene load_steps=12 format=2]

[ext_resource path="res://characters/enemies/boss/projectile/fireball.gd" type="Script" id=1]
[ext_resource path="res://characters/enemies/boss/blast/GoblinKing_Blast_3.png" type="Texture" id=2]
[ext_resource path="res://characters/enemies/boss/blast/GoblinKing_Blast_0.png" type="Texture" id=3]
[ext_resource path="res://characters/enemies/boss/projectile/GoblinKing_Projectile_2.png" type="Texture" id=4]
[ext_resource path="res://characters/enemies/boss/blast/GoblinKing_Blast_2.png" type="Texture" id=5]
[ext_resource path="res://characters/enemies/boss/projectile/GoblinKing_Projectile_1.png" type="Texture" id=6]
[ext_resource path="res://characters/enemies/boss/projectile/GoblinKing_Projectile_0.png" type="Texture" id=7]
[ext_resource path="res://characters/enemies/boss/projectile/GoblinKing_Projectile_3.png" type="Texture" id=8]
[ext_resource path="res://characters/enemies/boss/blast/GoblinKing_Blast_1.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 8 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": false,
"name": "explode",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 34.1441

[node name="fireball" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.1189, -1.05946 )
frames = SubResource( 1 )
animation = "fly"
frame = 2
speed_scale = 2.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 21.4058, 3.56761 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true
[connection signal="body_entered" from="." to="." method="_on_fireball_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
